tests/lime/fail/integers/overflow_integer_token_hex.wsa
push 0x0123456789abcdefABCDEF0123456789abcdefABCDEF0123456789abcdefABCDE
